Create customer add form

--- a/src/components/OrderList/OrderList.css
+++ b/src/components/OrderList/OrderList.css
@@ -1,7 +1,12 @@
 .order-table th{
     color:#fafafa !important; 
     background-color: #212121;
+    font-weight: bold;
 }
 
- 
+a:-webkit-any-link {
+    text-decoration: none;
+    color: inherit;
+  }
+
 
