Apply responsive codes

--- a/src/pages/CustomerList/CustomerList.css
+++ b/src/pages/CustomerList/CustomerList.css
@@ -1,3 +1,15 @@
 .new-customer-add-button{
-    float: right;
+    float: left;
 }
+
+.customer-table th{
+    color:#fafafa !important; 
+    background-color: #212121;
+    font-weight: bold;
+}
+
+a:-webkit-any-link {
+    text-decoration: none;
+    color: inherit;
+}
+
